# TA_TelegramBot

./: .gitignore  LICENSE  README.md  load-fixtures.sh  start-services.sh
DjangoServer/: pyproject.toml
DjangoServer/server/config/: settings.py
Server/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
Server/server/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
Server/server/catalog/fixtures/: catalog_data.json
Server/server/catalog/migrations/: 0001_initial.py
Server/server/config/: settings.py  urls.py
Server/server/faq/: admin.py  models.py  serializers.py  urls.py  views.py
Server/server/faq/fixtures/: faq_data.json
Server/server/faq/migrations/: 0001_initial.py
Server/server/order/: models.py  serializers.py  urls.py  views.py
Server/server/order/migrations/: 0001_initial.py
Server/server/user/: admin.py  models.py  serializers.py  urls.py  views.py
Server/server/utils/: message_sender.py
Server/server/webhooks/: urls.py  views.py
TelegramBot/: .env.example  .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
TelegramBot/handlers/: __init__.py  cart.py  catalog.py  faq.py  start.py
TelegramBot/infrastructure/: http_client.py
TelegramBot/models/: cart.py  catalog.py  faq.py
TelegramBot/reports/: orders.xlsx
TelegramBot/repositories/: catalog_repository.py  faq_repository.py  order_repository.py
TelegramBot/services/: api_client.py  api_provider.py  cart_service.py  fake_data.py  payment_service.py
TelegramBot/utils/: logger.py  subscription_check.py
(+2 files in other folders)
