[tool.poetry]
name = "djangoserver"
version = "0.1.0"
description = ""
authors = ["Kulikov Aleksandr <alexx324@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
