[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Kulikov Aleksandr <alexx324@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
redis = "^5.2.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
pydantic = "^2.10.6"
watchdog = "^6.0.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
